# marketing

./: .gitignore  AGENTS.md
.codex/: config.toml
backend/: .env.example  init_db.sql  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  response.py
backend/app/db/: connection.py
backend/app/repositories/: health_repo.py
backend/app/routers/: health.py
backend/app/services/: health_service.py
backend/scripts/: start_backend.sh  stop_backend.sh
backend/tests/: conftest.py  test_health_service.py
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js
frontend/scripts/: start_frontend.sh  stop_frontend.sh
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/components/atoms/: Badge.js  Button.js  Stat.js
frontend/src/components/molecules/: FeatureCard.js
frontend/src/components/organisms/: ComponentGrid.js  FlowStrip.js  Header.js
